--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prettier": "prettier --write .",
     "lint": "eslint --ext .ts packages/*/**.ts",
-    "lint:fix": "eslint --ext .ts packages/*/**.ts --fix"
+    "lint:fix": "eslint --ext .ts packages/*/**.ts --fix",
+    "play": "pnpm run dev --filter play"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,8 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "unplugin-vue-define-options": "^1.4.5",
+    "vue": "^3.4.21"
   }
 }
