--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -2,9 +2,14 @@
   "name": "@hgg-ui/components",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
+  "module": "index.ts",
+  "unpkg": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "peerDependencies": {
+    "vue": "^3.4.21"
   },
   "keywords": [],
   "author": "",
