--- a/package.json
+++ b/package.json
@@ -8,20 +8,23 @@
     "prettier": "prettier --write .",
     "lint": "eslint --ext .ts packages/*/**.ts",
     "lint:fix": "eslint --ext .ts packages/*/**.ts --fix",
-    "play": "pnpm run dev --filter play"
+    "play": "pnpm --filter play dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.14.2",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.26.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "unplugin-vue-define-options": "^1.4.5",
+    "vite": "^5.2.0",
     "vue": "^3.4.21"
   }
 }
