--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@types/node": "^20.14.2",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.26.0",
+    "postcss": "^8.4.39",
     "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5",
     "unplugin-vue-define-options": "^1.4.5",
     "vite": "^5.2.0",
